--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,14 @@
 -- Unresolved bugs
 
 -- Near Future
-
+    - Daily/Weekly Quests
+        Idea is to implement most important quests (when they are completed and also when available) So something similar to worldboses
+        Also allow user to input questIDs that they want to track and define what kind of quests they are (Weekly/Daily)
+        So need daily resets
+        - Side thing. Improve reset handling by reruning code when it happens if even user hasnt relogged.
 -- Some Time 
-    - Add Raid tab to config where you can choose which raids to track or not. For example, people that do transmog runs might actually want to see which raids they have done.
     - Maybe same for Dungeons (prob unlikely)
     - Localization
     - BFA Features (pls gif alpha/beta)
 
 -- Want it but not sure when or if
-    - Some kind of important daily quest tracking
